// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parsePermissions should marhsal allowed permssion set 1`] = `
[
  {
    "allowAnonymous": false,
    "allowedPermissions": [
      {
        "identity": "asmith@example.com",
        "identityType": "User",
      },
      {
        "identity": "bjones@example.com",
        "identityType": "USER",
      },
    ],
    "deniedPermissions": [],
  },
]
`;

exports[`parsePermissions should marhsal combined permssion sets 1`] = `
[
  {
    "allowAnonymous": true,
    "allowedPermissions": [],
    "deniedPermissions": [
      {
        "identity": "foo@example.com",
        "identityType": "USER",
      },
    ],
  },
  {
    "allowAnonymous": false,
    "allowedPermissions": [
      {
        "identity": "asmith@example.com",
        "identityType": "User",
      },
      {
        "identity": "bjones@example.com",
        "identityType": "USER",
      },
    ],
    "deniedPermissions": [],
  },
  {
    "allowAnonymous": false,
    "allowedPermissions": [
      {
        "identity": "Sample_group",
        "identityType": "Group",
      },
      {
        "identity": "bjones@example.com",
        "identityType": "user",
      },
    ],
    "deniedPermissions": [
      {
        "identity": "foo",
        "identityType": "VirtualGroup",
      },
    ],
  },
]
`;

exports[`parsePermissions should marhsal denied permssion set 1`] = `
[
  {
    "allowAnonymous": true,
    "allowedPermissions": [],
    "deniedPermissions": [
      {
        "identity": "foo@example.com",
        "identityType": "USER",
      },
    ],
  },
]
`;
